--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "scripts": {
     "dev": "next dev",
-    "postinstall": "prisma generate",
+    "postinstall": "node ./scripts/prisma-generate-if-env.mjs",
     "build": "next build",
     "start": "next start",
     "lint": "eslint",
