--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   "dependencies": {
     "@prisma/client": "^6.2.1",
     "next": "16.1.3",
+    "next-auth": "^4.24.13",
     "prisma": "^6.2.1",
     "react": "19.2.3",
     "react-dom": "19.2.3"
